Added static in multiple places

--- a/web_frontend/templates/root.html
+++ b/web_frontend/templates/root.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='{{url_for("static", filename="css/bootstrap_dark.css")}}' rel="stylesheet">
+    <link href='{{url_for("static", filename="bootstrap_dark.css")}}' rel="stylesheet">
     <meta charset="UTF-8">
     <title>Translate Audio files</title>
 </head>
