--- a/web_frontend/templates/root.html
+++ b/web_frontend/templates/root.html
@@ -31,10 +31,20 @@
 
             <h3 class="mb-3">Input the audio file</h3>
 
-            <form action="." class="" enctype="multipart/form-data" method="post">
-                <label for="audio_file">Audio file:</label>
-                <input id="audio_file" name="audio_file" required type="file">
-                <br><br>
+            <form action="." class="" enctype="multipart/form-data" method="post">          
+                 
+                  <div class="mb-2">
+                    <label for="audio_file">Audio file:</label>
+                    <input id="audio_file" name="audio_file" accept=".wav,.aiff,.aiff-c,.flac,.txt" required type="file" class="form-control-file">
+                  </div>
+                  <div class="row">
+                   <label for="model_type">Model type:</label> 
+                   <select name="model_type" id="model_type" class="form-control">
+                      <option value="small">Small model</option>
+                      <option value="big">Big model</option>
+                   </select>
+                  </div>
+                  <br><br>
                 <input type="submit" value="Submit">
             </form>
 
