--- a/web_frontend/templates/root.html
+++ b/web_frontend/templates/root.html
@@ -71,5 +71,13 @@
         </div>
     </div>
 </div>
+<br>
+<br>
+<footer class="container blockquote-footer">
+    <p>This is a project made by the skynet group for the CSAI software engineering course at Tilburg university
+        <br>
+        <a href="https://github.com/SE-translation/">Here</a> you can find the source code 😄</p>
+    </p>
+</footer>
 </body>
 </html>
