Made default option also checked 🙂

--- a/web_frontend/templates/root.html
+++ b/web_frontend/templates/root.html
@@ -41,7 +41,7 @@
                 <input id="a" value="file" type="radio" name="input_type">
                 <label for="a">Take input from uploaded file</label>
                 <br>
-                <input id="b" value="field" type="radio" name="input_type">
+                <input id="b" checked value="field" type="radio" name="input_type">
                 <label for="b">Take input from audio output field</label>
                 <br><br>
                 <input type="submit" value="Submit">
